--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-count",
   "version": "0.1.0",
-  "homepage": "https://github.com/AmanKumar117/word-count",
+  "homepage": "https://github.com/AmanKumar117.github.io/word-count",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +16,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build --public-url $REACT_APP_PUBLIC_URL",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
